# FlashDB-for-rust

./: Cargo.toml
docs/: flashdb-architecture-analysis.md  how-to-use-and-port.md  linux-validation-procedure.md  regression-test-catalog.md
docs/plans/: 00-top-down-roadmap.md  01-workspace-and-crate-structure.md  02-storage-layout-and-status-foundation.md  03-blob-and-codec-layer.md  04-kvdb-mvp-plan.md  05-kvdb-gc-and-recovery-plan.md  06-tsdb-plan.md  07-testing-validation-and-embassy-integration.md  07-testing-validation-and-rust-integration.md  07.5-no-std-no-alloc-transition.md  README.md  progress-20260418.md  progress.md
examples/linux/: Cargo.toml
examples/nrf5340/: Cargo.toml
examples/nrf5340/src/: main.rs
examples/stm32f401re/: Cargo.toml
examples/stm32f401re/src/: main.rs
scripts/: run-crash-tests.sh  verify-all.sh
src/: config.rs  crc.rs  error.rs  lib.rs
src/blob/: codec.rs  locator.rs  mod.rs  reader.rs
src/kv/: db.rs  gc.rs  iter.rs  mod.rs  recovery.rs  scan.rs  write.rs
src/layout/: align.rs  common.rs  kv.rs  mod.rs  status.rs  ts.rs
src/storage/: file_sim.rs  mock.rs  mod.rs  nor_flash.rs  region.rs
src/tsdb/: append.rs  db.rs  iter.rs  mod.rs  query.rs  recovery.rs
tests/: align.rs  aligned_write.rs  blob_codec.rs  blob_layer.rs  config_validation.rs  crash_scenarios.rs  crc_compat.rs  file_sim.rs  kv_basic.rs  kv_plan05.rs  kv_recovery.rs  layout_common.rs  layout_kv.rs  layout_ts.rs  no_alloc_bounds.rs  nor_flash_region_geometry.rs  status_codec.rs  storage_offset_map.rs  storage_region.rs  ts_basic.rs  ts_rollover.rs
